Attempt at fixing overflows

--- a/node/src/scss/_defaults.scss
+++ b/node/src/scss/_defaults.scss
@@ -1,8 +1,7 @@
 html, body, section {
 	width: 100%;
-	height: 100%;
+	height: auto;
 	box-sizing: border-box;
-	overflow: hidden;
 }
 
 h1 {
