--- a/node/src/scss/global.scss
+++ b/node/src/scss/global.scss
@@ -218,6 +218,7 @@
 	justify-content: center;
 	align-items: center;
 	height: 100vh;
+	width: 100vw;
 
 	&.is-hidden {
 		display: none;
